--- a/VerificaA/maps/src/app/app.component.html
+++ b/VerificaA/maps/src/app/app.component.html
@@ -1,4 +1,8 @@
-<google-map [center]="center">
-
-
+<google-map [center]="center" width="1000">
+    <div *ngIf="bottone">
+    <map-marker *ngFor="let m of markers" [position]="{'lat': m.lat, 'lng': m.lng}"
+        [options]="markerOptions"
+        ></map-marker>
+    </div>
+<button (click)="click()">show</button>
 </google-map>
