--- a/VerificaB/maps/src/app/app.component.html
+++ b/VerificaB/maps/src/app/app.component.html
@@ -5,4 +5,8 @@
   ></map-marker>
 </div>
 <button (click)="click()">show</button>
+<button (click)="pikachu()">pikachu</button>
+<button (click)="charmander()">charmander</button>
+<button (click)="bullbasaur()">bullbasaur</button>
+<button (click)="snorlax()">snorlax</button>
 </google-map>
